[project]
name = "datadog-viewer"
version = "0.1.0"
description = "A simple Flask application to track and manage DataDog test errors from CSV exports"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask>=2.3.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
